--- a/grade1.html
+++ b/grade1.html
@@ -28,7 +28,43 @@
             </ul>
         </nav>
 
-        <section class = "blog">
+        <aside>
+            <div class = "top">
+                <a href = "#heading">目錄</a>
+            </div>
+            <hr>
+            <div class = "category">
+                <ul>
+                    <li>大一上
+                        <ul>
+                            <li><a href="#calculus1" target="">微積分甲（一）</a></li>
+                            <li><a href="#physics1">物理（一）</a></li>
+                            <li><a href="#ICP">計算機概論與程式設計</a></li>
+                            <li><a href="#logicdesign">邏輯設計</a></li>
+                            <li><a href="#GEL">全球工程領袖培育及探索系列</a></li>
+                            <li><a href="#english1">大一英文（一）</a></li>
+                            <li><a href="#hsinchu">新竹六燃地方學：大學社會責任與在地實踐</a></li>
+                            <li><a href="#3dpaint">電腦輔助繪圖-快速設計提案</a></li>
+                            <li><a href="#itv">視覺藝術概論</a></li>
+                        </ul>
+                    </li>
+                    <li>大一下
+                        <ul>
+                            <li><a href="#calculus2">微積分甲（二）</a></li>
+                            <li><a href="#physics2">物理（二）</a></li>
+                            <li><a href="#OOP">計算機概論與程式設計</a></li>
+                            <li><a href="#linearalgebra">線性代數（英文班）</a></li>
+                            <li><a href="#english2">大一英文（二）</a></li>
+                            <li><a href="#psychology">普通心理學</a></li>
+                            <li><a href="#adb">藝術創作基礎</a></li>
+                            <li><a href="#pp">幾何造形</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+
+        <section id = "blog">
             <div class = "blog_container">
                 <div class = "box">
                     <div class = "box_img">
@@ -37,6 +73,417 @@
                     <h2>開課年度：110學年度</h2>
                     <hr/>
                 </div>
+
+                <div id = "calculus1" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>微積分甲（一）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 余啟哲</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 板書</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> B-</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "physics1" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>物理（一）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 李威儀</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 非同步線上影音</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "ICP" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>計算機概論與程式設計</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 蔡中庸</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 投影片 + 板書 + 上機</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A-</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "logicdesign" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>邏輯設計</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 廖育德</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 實體/線上 + 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> B+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "GEL" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>全球工程領袖培育及探索系列</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 田仲豪、邱一</li>
+                            <li><b>課程類別：</b> 選修/基本素養</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div id = "english1" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>大一英文（一）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 吳舜華</li>
+                            <li><b>課程類別：</b> 外語</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "hsinchu" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>新竹六燃地方學：大學社會責任與在地實踐</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 賴雯淑</li>
+                            <li><b>課程類別：</b> 領域課程</li>
+                            <li><b>授課方式：</b> 線上聽演講</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "3dpaint" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>電腦輔助繪圖-快速設計提案</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 郭明浩</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 實體實作</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "itv" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>視覺藝術概論</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 林愛真</li>
+                            <li><b>課程類別：</b> 選修/領域課程</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                    <hr/>
+                </div>
+
+                <div id = "calculus2" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>微積分甲（二）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 余啟哲</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 板書</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "physics2" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>物理（二）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 李威儀</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 非同步線上影音</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "OOP" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>物件導向程式設計</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 蔡中庸</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 投影片 + 板書 + 上機</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div id = "linearalgebra" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>線性代數（英文班）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 林源倍</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> B</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "english2" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>大一英文（二）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 彭怡婷</li>
+                            <li><b>課程類別：</b> 外語</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "psychology" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>普通心理學</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 梁瓊惠</li>
+                            <li><b>課程類別：</b> 領域課程</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "adb" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>藝術創作基礎</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 林愛真</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "pp" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>幾何造形</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 陳明璋</li>
+                            <li><b>課程類別：</b> 領域課程</li>
+                            <li><b>授課方式：</b> 實體實作</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> W</li>
+                        </ul>
+                    </div>
+                    <hr/>
+                </div>
+
 
             </div>
         </section>
