--- a/grade3.html
+++ b/grade3.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
 
-        <section class = "blog">
+        <section id = "blog">
             <div class = "blog_container">
                 <div class = "box">
                     <div class = "box_img">
