--- a/grade2.html
+++ b/grade2.html
@@ -28,15 +28,313 @@
             </ul>
         </nav>
 
+        <aside>
+            <div class = "top">
+                <a href = "#heading">目錄</a>
+            </div>
+            <hr>
+            <div class = "category">
+                <ul>
+                    <li><a href="#grade21">大二上</a>
+                        <ul>
+                            <li><a href="#electronic1">電子學（一）</a></li>
+                            <li><a href="#circuit">電路學</a></li>
+                            <li><a href="#elab1">電子實驗（一）</a></li>
+                            <li><a href="#de">微分方程</a></li>
+                            <li><a href="#dm">離散數學</a></li>
+                            <li><a href="#newseng">新聞英文</a></li>
+                            <li><a href="#mda">音樂、舞蹈與藝術治療之理論與實作：藝術教育與腦科學之觀點</a></li>
+                            <li><a href="#designbasisA">設計基礎Ａ</a></li>
+                            <li><a href="#cacdd">當代藝術與跨域設計</a></li>
+                            <li><a href="#computernetwork">電腦網路導論</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#grade22">大二下</a>
+                        <ul>
+                            <!--<li><a href="#calculus2">微積分甲（二）</a></li>
+                            <li><a href="#physics2">物理（二）</a></li>
+                            <li><a href="#OOP">物件導向程式設計</a></li>
+                            <li><a href="#linearalgebra">線性代數（英文班）</a></li>
+                            <li><a href="#english2">大一英文（二）</a></li>
+                            <li><a href="#psychology">普通心理學</a></li>
+                            <li><a href="#adb">藝術創作基礎</a></li>
+                            <li><a href="#pp">幾何造形</a></li>-->
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </aside>
+
         <section id = "blog">
             <div class = "blog_container">
                 <div class = "box">
                     <div class = "box_img">
                         <img src = "assets/p2.png"/>
                     </div>
-                    <h2>開課年度：111學年度</h2>
+                    <h2>修課年度：111學年度</h2>
+                </div>
+
+                <div id = "grade21" class = "box2">
+                    <div class = "box_heading"> 
+                        <h2>大一下</h2>
+                    </div>
+                    <div class = "box_text"> 
+                        <span>實得學分：23 &nbsp;&nbsp; GPA：4.17</span>
+                    </div>
                     <hr/>
                 </div>
+
+                <div id = "electronic1" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>電子學（一）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 陳科宏</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "circuit" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>電路學</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 洪崇智</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 線上播影片 + PPT</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "elab1" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>電子實驗（一）</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 王夢偉</li>
+                            <li><b>學分：</b> 2</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 實驗</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "de" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>微分方程</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 王忠炫</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 必修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "dm" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>離散數學</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 帥宏翰</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "newseng" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>新聞英語</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 秦毓婷</li>
+                            <li><b>學分：</b> 2</li>
+                            <li><b>課程類別：</b> 外語</li>
+                            <li><b>授課方式：</b> 投影片 + 分組討論</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "mda" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>音樂、舞蹈與藝術治療之理論與實作：藝術教育與腦科學之觀點</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 蔡淩蕙、謝仁俊、楊佩榮</li>
+                            <li><b>學分：</b> 2</li>
+                            <li><b>課程類別：</b> 領域課程</li>
+                            <li><b>授課方式：</b> 線上聽演講</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "designbasisA" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>設計基礎Ａ</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 許倍銜</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 投影片 + 實體實作</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "cacdd" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>當代藝術與跨域設計</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 林愛真</li>
+                            <li><b>學分：</b> 2</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 投影片</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> A+</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div id = "computernetwork" class = "box">
+                    <div class = "box_heading"> 
+                        <h3>電腦網路導論</h3>
+                    </div>
+                    <div class = "box_text"> 
+                        <ul>
+                            <li><b>老師：</b> 李程輝</li>
+                            <li><b>學分：</b> 3</li>
+                            <li><b>課程類別：</b> 選修</li>
+                            <li><b>授課方式：</b> 線上PPT</li>
+                            <li><b>評分方式：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>心得：</b>
+                                <ul>
+                                    <li></li>
+                                </ul>
+                            </li>
+                            <li><b>最後分數：</b> W</li>
+                        </ul>
+                    </div>
+                    <hr>
+                </div>
+                
                 
             </div>
         </section>
